# LCQPow

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  AUTHORS  AUTHORS.txt  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README  README.md  README.txt  TODO.txt  VERSIONS  VERSIONS.txt  build.sh  buildAndRunTests.sh  build_sparse.sh  clean.sh  configure.sh  make.mk  make_linux.mk  run.sh  test.sh  testMemory.sh
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  project-build-mac.yml  project-build-ubuntu.yml  project-builder-mac.yml  project-builder-ubuntu.yml  project-builder-w-python.yml  project-builder-wo-python.yml  project-builder.yml
Docker/: Dockerfile
UnitTesting/: RunUnitTests.cpp  TestUtils.cpp
debug/: Makefile  warm_up  warm_up.cpp
docs/: conf.py  requirements.txt
examples/: Makefile  OptimizeOnCircle.cpp  OptimizeOnCircleStoreSteps.cpp  README.md  failed_osqp_example.cpp  matplotlibtest.cpp  moving_masses.cpp  solve_generalized_from_file.cpp  solve_lcqp_from_file.cpp  test_csc.cpp  test_max_penalty.cpp  test_osqp.cpp  warm_up.cpp  warm_up_Schur.cpp  warm_up_binary.cpp  warm_up_osqp.cpp  warm_up_qpOASES_dense.cpp  warm_up_qpOASES_sparse.cpp  warm_up_schur.cpp  warm_up_sparse.cpp  warm_up_store_steps.cpp  warm_up_w_A.cpp
examples/FailedOSQPExample/: A.txt  L.txt  Q.txt  R.txt
examples/LCQP/: warm_up.cpp
examples/LCQP/example_data/: H.txt
examples/example_data/: generalized_constraintsA.txt  generalized_constraintsH.txt  generalized_constraintsS2.txt  generalized_constraintsg.txt  generalized_constraintslb.txt  generalized_constraintslb_S2.txt  generalized_constraintsubA.txt  generalized_constraintsub_S1.txt  generalized_constraintsx0.txt  ub.txt
examples/example_data/generalized_constraints/: L.txt
examples/example_data/one_ivocp_example/: A.txt  L.txt  R.txt  S1.txt  S2.txt  g.txt  lb.txt  lbA.txt  time.txt  ub.txt  ubA.txt  x0.txt  x_opt.txt  y_opt.txt
examples/example_data/one_ivocp_example/LCQP_free_true_50_x1/: A.txt  H.txt  ub.txt  vars.mat
include/: LCQProblem.hpp  LCQProblem.ipp  Matrices.hpp  MessageHandler.hpp  Options.hpp  OutputStatistics.hpp  PlotManager.hpp  Subsolver.hpp  SubsolverBase.hpp  SubsolverOSQP.hpp  SubsolverQPOASES.hpp  Utilities.hpp  Utilities.ipp  qpOASES.hpp
include/qpOASES/: LCQProblem.hpp  LCQProblem.ipp  LCQProblemB.hpp  LCQProblemB.ipp  MessageHandling.hpp  Options.hpp  Types.hpp
interfaces/matlab/: LCQPanther.cpp  LCQPanther.m  LCQParrot.cpp  LCQPow.cpp  LCQPow.m  LCQPow_options.m  Makefile  lcqpOASES.cpp  lcqpOASES.m  make.m  qpOASES_matlab_utils.cpp  qpOASES_options.m
interfaces/matlab/examples/: generalized_constraints.m  optimize_on_circle.m  scale1.m  solvers_test.m  warm_up.m
interfaces/python/examples/: OptimizeOnCircle.py  OptimizeOnCircleStoreSteps.py  solve_generalized_from_file.py  solve_lcqp_from_file.py  test_max_penalty.py  warm_up.py  warm_up_binary.py  warm_up_osqp.py  warm_up_sparse.py  warm_up_w_A.py
interfaces/python/lcqpow/: CMakeLists.txt  LCQProblem.cpp  Options.cpp  OutputStatistics.cpp  Utilities.cpp  __init__.py
src/: LCQProblem.cpp  LCQProblemB.cpp  Makefile  MessageHandler.cpp  Options.cpp  OutputStatistics.cpp  PlotManager.cpp  Subsolver.cpp  SubsolverOSQP.cpp  SubsolverQPOASES.cpp  Utilities.cpp
test/: RunUnitTests.cpp  warm_up_shifted.cpp
test/examples/: OptimizeOnCircle.cpp  OptimizeOnCircleStoreSteps.cpp  solve_generalized_from_file.cpp  solve_lcqp_from_file.cpp  test_max_penalty.cpp  warm_up.cpp  warm_up_OSQP_options.cpp  warm_up_binary.cpp  warm_up_change_options.cpp  warm_up_osqp.cpp  warm_up_qpOASES_options.cpp  warm_up_sparse.cpp  warm_up_w_A.cpp
test/examples/FailedOSQPExample/: A.txt  L.txt  Q.txt  R.txt  g.txt  lbR.txt  params.json  ubA.txt
test/examples/example_data/one_ivocp_example/: Q.txt  g.txt  lbA.txt  x0.txt
test/examples/generalized_constraints/: lbL.txt  ub.txt
